--- a/template/api/pages/models/pages.settings.json
+++ b/template/api/pages/models/pages.settings.json
@@ -34,7 +34,10 @@
         "sections.header-section",
         "sections.team",
         "sections.media-section",
-        "sections.newsletter-section"
+        "sections.newsletter-section",
+        "sections.faq-section",
+        "sections.banner-section",
+        "sections.slot-component-section"
       ]
     },
     "navigation": {
