--- a/template/api/sections/models/sections.settings.json
+++ b/template/api/sections/models/sections.settings.json
@@ -29,7 +29,7 @@
         "sections.newsletter-section",
         "sections.faq-section",
         "sections.banner-section",
-        "sections.slot"
+        "sections.component-slot"
       ]
     },
     "label": {
