--- a/template/api/sections/models/sections.settings.json
+++ b/template/api/sections/models/sections.settings.json
@@ -29,7 +29,8 @@
         "sections.newsletter-section",
         "sections.faq-section",
         "sections.banner-section",
-        "sections.component-slot"
+        "sections.component-slot",
+        "sections.table-section"
       ]
     },
     "label": {
