refactor: add length restriction to metadata field
Signed-off-by: Alexander Bartolomey <occloxium@gmail.com>

--- a/template/api/metadata/models/metadata.settings.json
+++ b/template/api/metadata/models/metadata.settings.json
@@ -15,10 +15,12 @@
       "type": "string"
     },
     "title": {
-      "type": "string"
+      "type": "string",
+      "maxLength": 60
     },
     "description": {
-      "type": "string"
+      "type": "string",
+      "maxLength": 160
     },
     "heroImage": {
       "model": "file",
