--- a/template/api/sections/models/sections.settings.json
+++ b/template/api/sections/models/sections.settings.json
@@ -30,7 +30,8 @@
         "sections.faq-section",
         "sections.banner-section",
         "sections.component-slot",
-        "sections.table-section"
+        "sections.table-section",
+        "sections.gallery"
       ]
     },
     "label": {
