fix: wrong relation between pages and sections
Signed-off-by: Alexander Bartolomey <occloxium@gmail.com>

--- a/template/api/pages/models/pages.settings.json
+++ b/template/api/pages/models/pages.settings.json
@@ -49,8 +49,7 @@
       "model": "footers"
     },
     "include": {
-      "collection": "sections",
-      "via": "page"
+      "collection": "sections"
     },
     "locale": {
       "type": "enumeration",
