--- a/template/api/footers/models/footers.settings.json
+++ b/template/api/footers/models/footers.settings.json
@@ -10,14 +10,19 @@
     "timestamps": true,
     "draftAndPublish": true
   },
+  "pluginOptions": {
+    "i18n": {
+      "localized": true
+    }
+  },
   "attributes": {
     "label": {
-      "type": "string"
-    },
-    "locale": {
-      "type": "enumeration",
-      "enum": ["de", "en", "fr"],
-      "default": "de"
+      "type": "text",
+      "pluginOptions": {
+        "i18n": {
+          "localized": true
+        }
+      }
     },
     "logo": {
       "model": "file",
@@ -26,31 +31,66 @@
         "images"
       ],
       "plugin": "upload",
-      "required": false
+      "required": false,
+      "pluginOptions": {
+        "i18n": {
+          "localized": true
+        }
+      }
     },
     "description": {
-      "type": "richtext"
+      "type": "richtext",
+      "pluginOptions": {
+        "i18n": {
+          "localized": true
+        }
+      }
     },
     "footnote": {
-      "type": "string"
+      "type": "string",
+      "pluginOptions": {
+        "i18n": {
+          "localized": true
+        }
+      }
     },
     "spanFlexbox": {
-      "type": "boolean"
+      "type": "boolean",
+      "pluginOptions": {
+        "i18n": {
+          "localized": false
+        }
+      }
     },
     "columns": {
       "type": "component",
       "repeatable": true,
-      "component": "elements.footer-column"
+      "component": "elements.footer-column",
+      "pluginOptions": {
+        "i18n": {
+          "localized": true
+        }
+      }
     },
     "socialLinks": {
       "type": "component",
       "repeatable": true,
-      "component": "links.social-media-link"
+      "component": "links.social-media-link",
+      "pluginOptions": {
+        "i18n": {
+          "localized": true
+        }
+      }
     },
     "theme": {
       "type": "component",
       "repeatable": false,
-      "component": "layout.footer-theme"
+      "component": "layout.footer-theme",
+      "pluginOptions": {
+        "i18n": {
+          "localized": false
+        }
+      }
     }
   }
 }
