--- a/template/api/navigations/models/navigations.settings.json
+++ b/template/api/navigations/models/navigations.settings.json
@@ -10,14 +10,19 @@
     "timestamps": true,
     "draftAndPublish": true
   },
+  "pluginOptions": {
+    "i18n": {
+      "localized": true
+    }
+  },
   "attributes": {
     "label": {
-      "type": "string"
-    },
-    "locale": {
-      "type": "enumeration",
-      "enum": ["de", "en", "fr"],
-      "default": "de"
+      "type": "string",
+      "pluginOptions": {
+        "i18n": {
+          "localized": true
+        }
+      }
     },
     "logo": {
       "model": "file",
@@ -26,11 +31,21 @@
         "images"
       ],
       "plugin": "upload",
-      "required": true
+      "required": true,
+      "pluginOptions": {
+        "i18n": {
+          "localized": true
+        }
+      }
     },
     "logoUrl": {
-      "type": "string",
-      "default": "/"
+      "type": "text",
+      "default": "/",
+      "pluginOptions": {
+        "i18n": {
+          "localized": true
+        }
+      }
     },
     "elements": {
       "type": "dynamiczone",
@@ -39,12 +54,22 @@
         "links.link",
         "links.button",
         "layout.spacer"
-      ]
+      ],
+      "pluginOptions": {
+        "i18n": {
+          "localized": true
+        }
+      }
     },
     "theme": {
       "type": "component",
       "repeatable": false,
-      "component": "layout.navigation-theme"
+      "component": "layout.navigation-theme",
+      "pluginOptions": {
+        "i18n": {
+          "localized": false
+        }
+      }
     }
   }
 }
