--- a/template/api/pages/models/pages.settings.json
+++ b/template/api/pages/models/pages.settings.json
@@ -10,13 +10,28 @@
     "timestamps": true,
     "draftAndPublish": true
   },
+  "pluginOptions": {
+    "i18n": {
+      "localized": true
+    }
+  },
   "attributes": {
     "slug": {
       "type": "string",
-      "required": true
+      "required": true,
+      "pluginOptions": {
+        "i18n": {
+          "localized": true
+        }
+      }
     },
     "shortName": {
-      "type": "string"
+      "type": "string",
+      "pluginOptions": {
+        "i18n": {
+          "localized": true
+        }
+      }
     },
     "elements": {
       "type": "dynamiczone",
@@ -40,7 +55,12 @@
         "sections.component-slot",
         "sections.table-section",
         "sections.gallery"
-      ]
+      ],
+      "pluginOptions": {
+        "i18n": {
+          "localized": true
+        }
+      }
     },
     "navigation": {
       "model": "navigations"
@@ -50,11 +70,6 @@
     },
     "include": {
       "collection": "sections"
-    },
-    "locale": {
-      "type": "enumeration",
-      "enum": ["de", "en", "fr"],
-      "default": "de"
     },
     "metadata": {
       "model": "metadata"
