feat: embedded content and Tours API
Signed-off-by: Alexander Bartolomey <occloxium@gmail.com>

--- a/template/api/pages/models/pages.settings.json
+++ b/template/api/pages/models/pages.settings.json
@@ -54,7 +54,8 @@
         "sections.banner-section",
         "sections.component-slot",
         "sections.table-section",
-        "sections.gallery"
+        "sections.gallery",
+        "sections.embedded-content-section"
       ],
       "pluginOptions": {
         "i18n": {
