--- a/template/api/sections/models/sections.settings.json
+++ b/template/api/sections/models/sections.settings.json
@@ -36,7 +36,8 @@
         "sections.banner-section",
         "sections.component-slot",
         "sections.table-section",
-        "sections.gallery"
+        "sections.gallery",
+        "sections.embedded-content-section"
       ],
       "pluginOptions": {
         "i18n": {
