feat: add full-width section
Signed-off-by: Alexander Bartolomey <occloxium@gmail.com>

--- a/template/api/pages/models/pages.settings.json
+++ b/template/api/pages/models/pages.settings.json
@@ -55,7 +55,8 @@
         "sections.component-slot",
         "sections.table-section",
         "sections.gallery",
-        "sections.embedded-content-section"
+        "sections.embedded-content-section",
+        "sections.full-width-section"
       ],
       "pluginOptions": {
         "i18n": {
