fix: missing draft-and-publish for jobs api
Signed-off-by: Alexander Bartolomey <occloxium@gmail.com>

--- a/template/api/jobs/models/jobs.settings.json
+++ b/template/api/jobs/models/jobs.settings.json
@@ -5,7 +5,7 @@
     "description": "Jobs collect all currently open job positions"
   },
   "options": {
-    "draftAndPublish": false,
+    "draftAndPublish": true,
     "increments": true,
     "timestamps": true,
     "comment": ""
