feat: add toggle on page level to disable or enable chatwoot
Signed-off-by: Alexander Bartolomey <occloxium@gmail.com>

--- a/template/api/pages/models/pages.settings.json
+++ b/template/api/pages/models/pages.settings.json
@@ -33,6 +33,15 @@
         }
       }
     },
+    "enableChat": {
+      "type": "boolean",
+      "default": false,
+      "pluginOptions": {
+        "i18n": {
+          "localized": false
+        }
+      }
+    },
     "elements": {
       "type": "dynamiczone",
       "components": [
