fix: localize toggle for chat
makes sense to control this on a locale basis

Signed-off-by: Alexander Bartolomey <occloxium@gmail.com>

--- a/template/api/pages/models/pages.settings.json
+++ b/template/api/pages/models/pages.settings.json
@@ -38,7 +38,7 @@
       "default": false,
       "pluginOptions": {
         "i18n": {
-          "localized": false
+          "localized": true
         }
       }
     },
