--- a/template/api/pages/models/pages.settings.json
+++ b/template/api/pages/models/pages.settings.json
@@ -42,6 +42,15 @@
         }
       }
     },
+    "virtual": {
+      "pluginOptions": {
+        "i18n": {
+          "localized": true
+        }
+      },
+      "type": "boolean",
+      "default": false
+    },
     "elements": {
       "type": "dynamiczone",
       "components": [
