--- a/template/api/footers/models/footers.settings.json
+++ b/template/api/footers/models/footers.settings.json
@@ -16,6 +16,14 @@
     }
   },
   "attributes": {
+    "name": {
+      "type": "string",
+      "pluginOptions": {
+        "i18n": {
+          "localized": false
+        }
+      }
+    },
     "label": {
       "type": "text",
       "pluginOptions": {
