--- a/template/api/jobs-details-page/models/jobs-details-page.settings.json
+++ b/template/api/jobs-details-page/models/jobs-details-page.settings.json
@@ -47,7 +47,8 @@
         "sections.table-section",
         "sections.gallery",
         "sections.embedded-content-section",
-        "sections.full-width-section"
+        "sections.full-width-section",
+        "sections.anny-widget-section"
       ],
       "pluginOptions": {
         "i18n": {
